--- a/templates/proxy.html
+++ b/templates/proxy.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/main.css">
+        <link rel="stylesheet" href="/static/normalize.css">
+        <link rel="stylesheet" href="/static/skeleton.css">
         <title>proxy for {{.title}}</title>
     </head>
     <body>
