--- a/static/main.css
+++ b/static/main.css
@@ -1,33 +1,17 @@
 
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-}
-
-.container {
-
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 3.5rem;
-
-}
-
-.container img {
-    max-width: 100%;
+img, figure {
+    max-width: 100%; 
     height: auto;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-@media screen and (max-width: 768px) {
-    .container {
-        padding: 1.5rem;
-        max-width: 700px;
-    }
+figure {
+    display: block;
+    align-items: center;
+    align-self: center;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-@media screen and (max-width: 480px) {
-    .container {
-        padding: 1rem;
-        max-width: 100%;
-    }
-}
-
