--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,10 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="/static/normalize.css">
-        <link rel="stylesheet" href="/static/skeleton.css">
-        <title>HN-Lite</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="container">
-            <h1>HN-Lite</h1>
-            <h2>Top Stories</h2>
-            <ul>
-                <li>lorem ipsum dolor sit ament</li>
-                <li>lorem ipsum dolor sit ament</li>
-                <li>lorem ipsum dolor sit ament</li>
-                <li>lorem ipsum dolor sit ament</li>
-            </ul>
+<p>
+    HN-Lite is a simple reader for content on Hacker News and several other news aggregators.
+</p>
 
-            <p>HN-Lite is a way to read the stories on Hacker News on devices with slow processors, smaller screens, and </p>
-        </div> 
-    </body>
-</html>
+{{range .stories}}
+<div>
+    <p>{{.Title}} <br />{{.Published}}</p>
+    <p>{{.URL}}</p>
+</div>
+{{end}}
