--- a/templates/proxy.html
+++ b/templates/proxy.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/normalize.css">
-        <link rel="stylesheet" href="/static/skeleton.css">
+        <link rel="stylesheet" href="/static/tachyons.css">
+        <script src="/reload/rl.js" lang="text/javascript"></script>
         <title>proxy for {{.title}}</title>
     </head>
     <body>
